--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.2",
     "react-spinners": "^0.11.0",
     "styled-components": "^5.3.5",
     "styled-media-query": "^2.1.2"
