--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.1.2",
     "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "17.0.2",
     "react-markdown": "^8.0.2",
     "react-spinners": "^0.11.0",
