--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
     "next": "12.1.2",
     "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
